force-app/main/default/objects/Prestation_distributeur__c/fields/SI_contractuel__c.field-meta.xml
<CustomField>
    <fullName>SI_contractuel__c</fullName>
    <label>SI contractuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GINKO</fullName>
            </value>
            <value>
                <fullName>DISCO</fullName>
            </value>
            <value>
                <fullName>Inconnu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>