force-app/main/default/objects/Prestation_distributeur__c/fields/Situation_de_vente__c.field-meta.xml
<CustomField>
    <fullName>Situation_de_vente__c</fullName>
    <description>Pemet de déterminer la situation de vente du parcours depuis lequel le conseiller effectue une creation d&apos;OPS</description>
    <label>Situation de vente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emménagement</fullName>
            </value>
            <value>
                <fullName>Changement de fournisseur</fullName>
            </value>
            <value>
                <fullName>Changement d&apos;offre</fullName>
            </value>
            <value>
                <fullName>Resiliation</fullName>
            </value>
            <value>
                <fullName>HP_Reduction_de_puissance</fullName>
                <label>Réduction de puissance</label>
            </value>
            <value>
                <fullName>HP_Coupure</fullName>
                <label>Coupure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>