force-app/main/default/objects/Prestation_distributeur__c/fields/Statut_dernier_jalon__c.field-meta.xml
<CustomField>
    <fullName>Statut_dernier_jalon__c</fullName>
    <description>@description: ce champ prend le Statut dernier jalon
@projet: smile</description>
    <label>Statut dernier jalon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>