force-app/main/default/objects/Prestation_distributeur__c/fields/Telephone_intervention__c.field-meta.xml
<CustomField>
    <fullName>Telephone_intervention__c</fullName>
    <description>Téléphone du contact d&apos;intervention mis à jour au retour des flux distributeur ou X12 ou SDEM</description>
    <label>Telephone intervention</label>
    <type>Phone</type>
</CustomField>