force-app/main/default/objects/Prestation_distributeur__c/fields/Type_de_compteur__c.field-meta.xml
<CustomField>
    <fullName>Type_de_compteur__c</fullName>
    <description>Type de compteur sur lequel est effectué une vente ou une création d&apos;OPS</description>
    <label>Type de compteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historique</fullName>
            </value>
            <value>
                <fullName>LINKY</fullName>
            </value>
            <value>
                <fullName>Inconnu</fullName>
            </value>
            <value>
                <fullName>Gazpar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>