force-app/main/default/objects/Prestation_distributeur__c/fields/Type_de_prestation__c.field-meta.xml
<CustomField>
    <fullName>Type_de_prestation__c</fullName>
    <label>Type de prestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>