force-app/main/default/objects/Prestation_distributeur__c/fields/Type_OPS__c.field-meta.xml
<CustomField>
    <fullName>Type_OPS__c</fullName>
    <label>Type d&apos;OPS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recollement</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Réduction de puissance</fullName>
            </value>
            <value>
                <fullName>Demande de coupure</fullName>
            </value>
            <value>
                <fullName>Rétablissement</fullName>
            </value>
            <value>
                <fullName>Différé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>