force-app/main/default/objects/Prestation_distributeur__c/recordTypes/HP_PrestationDistributeur.recordType-meta.xml
<RecordType>
    <fullName>HP_PrestationDistributeur</fullName>
    <active>true</active>
    <label>HP_PrestationDistributeur</label>
</RecordType>