force-app/main/default/objects/Prestation_distributeur__c/recordTypes/SM_PrestationDistributeur.recordType-meta.xml
<RecordType>
    <fullName>SM_PrestationDistributeur</fullName>
    <active>true</active>
    <label>SM_Prestation_distributeur</label>
</RecordType>