force-app/main/default/objects/Prestation_distributeur__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Numero_PDL_PCE__c</field>
        <operation>equals</operation>
        <value>01438929005493</value>
    </filters>
    <label>All</label>
</ListView>