force-app/main/default/objects/Prestation_distributeur__c/listViews/HP_EnCours.listView-meta.xml
<ListView>
    <fullName>HP_EnCours</fullName>
    <columns>Date_de_prestation__c</columns>
    <columns>NAME</columns>
    <columns>Type_de_prestation__c</columns>
    <columns>Numero_affaire_distributeur__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Prestation_distributeur__c.HP_PrestationDistributeur</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>A initier,En cours</value>
    </filters>
    <label>Prestations distributeurs en cours</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HP_HAPPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>